# Unsorted_Practice

./: .gitignore  CMakeLists.txt  Point.geany  README.md  SmartPointer.cpp  SmartPointer.hpp  array.cpp  array_out  array_out.cpp  array_sum.c  array_sum.x64  bitSwapRequired.cpp  boost_ptr.cpp  compare.cpp  convert.cpp  dice.x64  fib_recursive.cpp  fib_recursive_.cpp  foo.cpp  int_test.cpp  intarray.cpp  intarray.hpp  intmin.c  lockLoop.cpp  main.cpp  nat_div.cpp  numbers.c  person.hpp  power_of_two.cpp  sample_debug.c  segment.hpp  segment.hpp.gch  sizeof  sortArray.cpp  string.cpp  string.hpp  student.hpp  text.lst  virtual.hpp
CppLessons/: main.cpp
K&R_C/: celsius2fahr.c  f2c_forVersion.c  fahr_float.c  fahrengeit.c  hello.c
Learn C++ Video Game Programming/: Makefile  ep_1_1
OpenCV/: .gitignore
Point/: intarray.cpp  intarray.hpp  main.cpp  point.cpp  string.cpp  string.hpp
Tasks/bit_test/: CMakeLists.txt  bit_test.cpp  counter_boccara.cpp  cum_tvr.cpp  logger_helper.cpp  main.cpp
Tasks/gtest/: CMakeLists.txt  hello.cpp  hello.h  main.cpp  test_hello.cpp
beg/: b_pow_of_two.cpp
constexp/: Makefile  main.cpp
constfloat/: makefile  worker2.cpp
cpp_part2_less/: D1BaseToD2Base.cpp  ElfArcher.h  README.md  Unit.h  test_main  test_main.cpp
d_tube/: Makefile  log.txt  main.cpp  youtube_videos.tsv
dev_on_lin/: Makefile  Makefile.old  cmd_view_current_path.txt  hello  hello.c  hello.h  main.c  read_write_strace  read_write_strace.c  solution.c  trace.txt
gtk/: gtk.cpp  gtk_hello_world  gtk_window
imm/: ValueHolder.Any.cpp  arrays.cpp  person.hpp  segment.cpp  string.cpp  string.hpp
job_offer/: set_nonblock.h  test.txt
job_offer/SRT_Parser/: CMakeLists.txt  Description.txt  README.md  Test.md  tests.cpp
job_offer/SRT_Parser/src/: parser.cpp  parser.h
lesson/: Examples_pointer_array.txt  array.cpp  array2d.cpp  dynamic_array.cpp  hello.vala  hello_preproc.cpp  init.cpp  main.cpp  max_el.cpp  square.cpp  square_preprocessed.cpp  str_cat.cpp  str_len.cpp
mail.ru_less/: a.out  fib.cpp  hello.c  lead_arr.cpp  lesson2.1.c  lesson2.2.c  lesson2.3.cpp  max.cpp  prog.cpp  test.c  (+6 more)
(+700 files in other folders)
