cmake_minimum_required(VERSION 3.5)
project(binary)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

#add_executable(binary main.cpp)
#add_executable(binary counter_boccara.cpp)
#add_executable(binary logger_helper.cpp)
add_executable(binary cum_tvr.cpp)